cmake_minimum_required(VERSION 3.15)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "-O2 -g3 -fsanitize=address -I/opt/homebrew/include")
set(CMAKE_CXX_FLAGS "-O2 -g3 -pthread -Wno-deprecated-declarations -DHANDYPSP -DUSE_BUSROM -DFAKENMI -D_LOGASM")
find_package(SDL2 REQUIRED)
#project(a.out LANGUAGES CXX)

include_directories(${SDL2_INCLUDE_DIRS} ".")
#target_link_libraries(a.out PRIVATE "-Wl,-stack_size -Wl,3f00000")
#target_link_directories(a.out PUBLIC "/opt/homebrew/lib")
#find_package(SDL2 REQUIRED PATH /opt/homebrew/lib)
#target_link_libraries(a.out SDL2)
add_executable(a.out comm.cpp NekoDriver.cpp  NekoDriverDebug.cpp NekoDriverIO.cpp    NekoDriverMem.cpp   main.cpp ANSI/w65C02cpu.cpp        ANSI/w65C02op.cpp  KeyItem.cpp)
target_link_libraries(a.out ${SDL2_LIBRARIES})
